# SecureVault-Desktop

./: .gitignore  README.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CredentialDetail.tsx  DeleteConfirmModal.tsx  FolderModal.tsx  ImportPasswordModal.tsx  LockScreen.tsx  PasswordGenerator.tsx  SecurityAudit.tsx  SplashScreen.tsx
src/hooks/: usePasswordGenerator.ts  useSecurityAudit.ts  useVault.ts
src/utils/: tauriBridge.ts  vaultStorage.ts  wordlist.ts
